--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casino Royale</title>
-    <link rel="Stylesheet" type="text/css" href="/css/loginStyles.css">
+    <link rel="Stylesheet" type="text/css" href="css/loginStyles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
-    <script type="text/javascript" src="./scripts/login.js"></script>
+    <script type="text/javascript" src="/scripts/login.js"></script>
 </head>
 <body>
     <header>
