--- a/pplpage.html
+++ b/pplpage.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casino Royale</title>
     <link rel="Stylesheet" type="text/css" href="/css/loginStyles.css">
-    <link rel="stylesheet" href="./css/pplpagestyles.css">
+    <link rel="stylesheet" href="/css/pplpagestyles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <script type="text/javascript" src="./scripts/login.js"></script>
-    <script type="text/javascript" src="./scripts/pplpage.js"></script>
+    <script type="text/javascript" src="/scripts/login.js"></script>
+    <script type="text/javascript" src="/scripts/pplpage.js"></script>
 </head>
 <body>
     <header>
