--- a/poker.html
+++ b/poker.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Blackjack v.2</title>
-  <link rel="stylesheet" href="/css/pokerStyle.css"><link rel="stylesheet" href="/css/loginStyles.css">
+  <link rel="stylesheet" href="/css/pokerStyle.css"><link rel="stylesheet" href="/scripts/login.js">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
 </head>
