mejoras en ruleta

--- a/roulette.html
+++ b/roulette.html
@@ -2,7 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - CSS Roulette Wheel</title>
+  <link rel="shortcut icon" href="./assets/icono.png">
+  <title> Roulette Wheel</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'><link rel="stylesheet" href="./css/roulettestyle.css">
 
 </head>
@@ -65,11 +66,12 @@
       </div>
     </div>
   </div>
-  <div class="previous-results">
-    <ol class="previous-list">
-      <li class='visuallyhidden placeholder'>No results yet.</li>
-    </ol>
-  </div>
+  <h1></h1>
+  <form class="apuesta">
+    <!--input type="text" name="apuesta" class="apuesta-input" placeholder="Valor a apostar"/>-->
+    <input type="text" class="num-apuesta"placeholder="Numero al que le desea apostar"/>
+  </form>
+  
 </div>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
